--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,29 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  ## State Management
+  get: ^4.6.1
+
+  ## Common
+  connectivity: ^3.0.6
+  equatable: ^2.0.3
+  fluttertoast: ^8.0.9
+  flutter_native_splash: ^2.1.3+1
+  intl: ^0.17.0
+  json_annotation: ^4.4.0
+  json_serializable: ^6.1.5
+  rxdart: ^0.27.3
+
+  ## Device Utilities
+  flutter_keyboard_visibility: ^5.2.0
+
+  ## Http Client
+  dio: ^4.0.6
+
+  ## Widgets
+  cached_network_image: ^3.2.0
+  lottie: ^1.2.2
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
