--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,14 @@ dev_dependencies:
     sdk: flutter
 
   build_runner: ^2.1.8
+#  flutter_launcher_icons: ^0.9.2
+#
+#
+#flutter_icons:
+#  android: "launcher_icon"
+#  ios: true
+#  remove_alpha_ios: true
+#  image_path: "assets/images/ic_app.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
