--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dev_dependencies:
     sdk: flutter
 
   build_runner: ^2.1.8
+#  change_app_package_name: ^1.0.0
 #  flutter_launcher_icons: ^0.9.2
 #
 #
