--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   connectivity: ^3.0.6
   equatable: ^2.0.3
   fluttertoast: ^8.0.9
-  flutter_native_splash: ^2.1.3+1
   intl: ^0.17.0
   json_annotation: ^4.5.0
   json_serializable: ^6.2.0
@@ -69,6 +68,7 @@ dev_dependencies:
     sdk: flutter
 
   build_runner: ^2.1.8
+#  flutter_native_splash: ^2.1.3+1
 #  change_app_package_name: ^1.0.0
 #  flutter_launcher_icons: ^0.9.2
 #
