--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   dio: ^4.0.6
 
   ## Widgets
-  audio_video_progress_bar: ^0.10.0
+#  audio_video_progress_bar: ^0.10.0
   cached_network_image: ^3.2.0
   just_audio: ^0.9.20
   lottie: ^1.2.2
